--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,15 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+//Headers
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Josefin+Sans:wght@300&family=Rye&display=swap');
+//Body
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Josefin+Sans:wght@300&display=swap');
 
 // Define fonts for body and headers
-$body-font: "Work Sans", "Helvetica", "sans-serif";
-$headers-font: "Nunito", "Helvetica", "sans-serif";
+// $body-font: "Work Sans", "Helvetica", "sans-serif";
+// $headers-font: "Nunito", "Helvetica", "sans-serif";
+$body-font: 'Aclonica', sans-serif;
+$headers-font: 'Rye', cursive;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
