--- a/app/views/crops/index.html.erb
+++ b/app/views/crops/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Crops#index</h1>
-<p>Find me in app/views/crops/index.html.erb</p>
+<%= render 'shared/banner' %>
+<div class="movies" data-controller>
+</div>
