--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,14 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('images/banner.jpg');">
-  <div class="container">
-    <h1></h1>
-    <p>Find the crops you can grow in your area</p>
-    <a class="btn btn-flat" href="#">Apply now</a>
+<div class="banner">
+  <div class="banner-content text-center">
+    <h1>Start growing fresh vegetables now!</h1>
+    <p>You can check the vegetables recomended to grow in your area</p>
+    <%= form_tag crops_path, method: :get do %>
+      <%= text_field_tag :query,
+                          params[:query],
+                          class: "form-control",
+                          placeholder: "find crops to grow in your city"
+                        %>
+      <%= submit_tag "Search", class: "btn btn-primary my-3" %>
+    <% end %>
   </div>
 </div>
