--- a/app/assets/stylesheets/components/_crop-card.scss
+++ b/app/assets/stylesheets/components/_crop-card.scss
@@ -1,15 +1,73 @@
-.card-body {
+.card-product {
+  overflow: hidden;
+  height: 120px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
-  justify-content: space-between;
+  align-items: center;
 }
 
-.crop-card {
-  position: relative;
-  img {
-    position: absolute;
+.card-product img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+}
+
+.card-product h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-product p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.card-product .card-product-infos {
+  padding: 16px;
+}
+
+.crops {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .crops {
+    grid-template-columns: 1fr;
   }
-  background-color: #BDDBD0;
-  border-radius: 4px;
-  ;
-  border: solid grey 1px
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .crops {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .crops {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .crops {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+  .crops {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
