--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -5,7 +5,7 @@
     <%= form_tag crops_path, method: :get do %>
       <%= text_field_tag :query,
                           params[:query],
-                          class: "form-control",
+                          class: "form-control text-center",
                           placeholder: "find crops to grow in your city"
                         %>
       <%= submit_tag "Search", class: "btn btn-primary my-3" %>
