Change config styles.

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,11 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+// Custom colors:
+$moss: #365622;
+$asparagus: #86AD77;
+$off-white: #FAFAFA;
+$tangerine: #EF907B;
+$burgundy: #AE133B;
+$blue-black: #080E21;
