--- a/app/views/crops/index.html.erb
+++ b/app/views/crops/index.html.erb
@@ -1,15 +1,12 @@
-<div data-controller="refresh-crops">
-  <%= form_with url: crops_path, method: :get, html: { class: 'my-5', data: { refresh_crops_target: 'form' } } do |f| %>
-    <%= f.text_field :query,
-                     class: "form-control",
-                     placeholder: 'Type your city',
-                     value: params[:query],
-                     data: {
-                     refresh_crops_target: 'searchInput',
-                     action: "input->refresh-crops#update"
-                    } %>
+<div class="cropes">
+  <% @crops.each do |crop| %>
+    <%= render "crop", crop: crop %>
   <% end %>
-  <div data-refresh-crops-target="crops">
-    <%= render "crops", crops: @crops %>
+</div>
+<div class="crops">
+  <div id="favorites" style="border: 1px solid red">
+    <% @favorites.each do |favorite| %>
+      <%= render "crop", crop: favorite %>
+    <% end %>
   </div>
 </div>
