--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container" data-controller="tile-container">
   <div class="row">
     <% @tiles.each do |tile| %>
-      <div class="col border"><%= tile.x_position %> <%= tile.y_position %></div>
+      <div class="col border" id="<%= tile.id %>" data-tile-container-target="tile" data-action='click->tile-container#changeClass'><%= tile.x_position %> <%= tile.y_position %></div>
     <% end %>
   </div>
 </div>
+<div><%= link_to "Add my vegetables", new_garden_plot_path(@garden), value: { } %></div>
