--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -4,5 +4,17 @@
       <div class="col border" id="<%= tile.id %>" data-tile-container-target="tile" data-action='click->tile-container#changeClass'><%= tile.x_position %> <%= tile.y_position %></div>
     <% end %>
   </div>
+  <div data-tile-container-target="display-form"><%= link_to "Add my vegetables" %></div>
+  <div class="" data-tile-container-target="form">
+    <%= simple_form_for [@garden, @plot] do |f| %>
+      <%= f.input :name %>
+      <%#= f.input :category, as: :select, collection: Item::CATEGORIES, label: "Category" %>
+      <%#= collection with the favorited crops %>
+      <%= f.input :tiles, :as => :hidden, :input_html => { data: { "tile-container-target": "input" } } %>
+      <%#= hidden_field_tag 'some_ids[]', [1,2,3], id: 'extra_ids' %>
+      <%#= f.input :price_per_day, label: "Price per Day" %>
+      <%#= f.input :description, as: :text, label: "Few words about an item" %>
+      <%= f.submit "Create plot", class: 'btn btn-primary' %>
+    <% end %>
+  </div>
 </div>
-<div><%= link_to "Add my vegetables", new_garden_plot_path(@garden), value: { } %></div>
