Change crop card styling.

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,6 +12,7 @@ $light-gray: #F4F4F4;
 // Custom colors:
 $moss: #365622;
 $asparagus: #86AD77;
+$mint: #BDDBD0;
 $off-white: #FAFAFA;
 $tangerine: #EF907B;
 $burgundy: #AE133B;
