--- a/app/views/crops/index.html.erb
+++ b/app/views/crops/index.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="refresh-crops">
+<div class="container" data-controller="refresh-crops">
   <%= form_with url: crops_path, method: :get, html: { class: 'my-5', data: { refresh_crops_target: 'form' } } do |f| %>
     <%= f.text_field :query,
                      class: "form-control",
