--- a/app/assets/stylesheets/components/_crop-card.scss
+++ b/app/assets/stylesheets/components/_crop-card.scss
@@ -1,15 +1,14 @@
-.card-body {
-  display: flex;
-  justify-content: space-between;
-}
-
 .crop-card {
   position: relative;
   img {
-    position: absolute;
+    width: 120px;
+    object-fit: contain;
   }
-  background-color: #BDDBD0;
-  border-radius: 4px;
-  ;
-  border: solid grey 1px
+  background-color: $mint;
+  border-radius: 16px;
+}
+
+.card-body {
+  display: flex;
+  justify-content: space-around;
 }
