commit to pull recent changes

--- a/app/views/crops/_crop.html.erb
+++ b/app/views/crops/_crop.html.erb
@@ -1,10 +1,12 @@
-<div class="card-product">
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-  <div class="card-product-infos">
-    <h2><%= crop.name %></h2>
-    <p><%= crop.description %></p>
+<div data-toggle-favorite-target="basket">
+  <div class="card-product">
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+    <div class="card-product-infos">
+      <h2><%= crop.name %></h2>
+      <p><%= crop.description %></p>
+    </div>
+    <%= link_to toggle_favorite_crop_path(crop), method: "POST" do %>
+      <i class="fas fa-shopping-basket"></i>
+    <% end %>
   </div>
-  <%= link_to toggle_favorite_crop_path(crop), method: "POST" do %>
-    <i class="far fa-square"></i>
-  <% end %>
 </div>
