--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -5,7 +5,7 @@
     <% end %>
   </div>
 
-  <div data-tile-container-target="link" data-action='click->tile-container#displayForm'><%= link_to "Add my vegetables" %></div>
+  <div class="btn btn-primary" data-tile-container-target="link" data-action='click->tile-container#displayForm'>Add my vegetables</div>
 
   <div class="" data-tile-container-target="form">
     <%= simple_form_for [@garden, @plot] do |f| %>
