--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -8,12 +8,12 @@
   background-size: cover;
   background-position: center;
   h1 {
-    color: white;
+    color: $off-white;
     font-weight: bold;
     font-size: 45px;
   }
   p {
-    color: white;
+    color: $off-white;
     opacity: .8;
     font-size: 25px;
     font-weight: lighter;
