--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -13,6 +13,7 @@ $light-gray: #F4F4F4;
 $moss: #365622;
 $asparagus: #86AD77;
 $mint: #BDDBD0;
+$eggshell: #E5F1EC;
 $off-white: #FAFAFA;
 $tangerine: #EF907B;
 $burgundy: #AE133B;
