--- a/app/views/crops/_crop.html.erb
+++ b/app/views/crops/_crop.html.erb
@@ -5,7 +5,7 @@
         <div class="crop-card">
           <div class="card-body">
             <div class="card-text">
-              <h2><%= crop.name %></h2>
+              <h2><%= link_to crop.name, crop_path(crop) %></h2>
               <div data-action="click->filter-cropes#select">
                 <%= link_to toggle_favorite_crop_path(crop), method: "POST" do %>
                   <i class="fas fa-shopping-basket"></i>
