Update gardens#index, and selected class styling for plots.

--- a/app/assets/stylesheets/components/_garden.scss
+++ b/app/assets/stylesheets/components/_garden.scss
@@ -5,4 +5,10 @@
 .tile {
   background-image: url(tile.png);
   height: 60px;
+  border: 1px solid $off-white;
+  border-radius: 4px;
+}
+
+.selected {
+  border: 1px solid $tangerine;
 }
