--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,7 +3,8 @@
 @import "avatar";
 @import "banner";
 @import "button";
+@import "crop_card";
 @import "form";
 @import "garden";
-@import "crop-card";
+@import "garden_card";
 @import "navbar";
