Add plot display feature to gardens#show.

--- a/app/assets/stylesheets/components/_garden.scss
+++ b/app/assets/stylesheets/components/_garden.scss
@@ -3,10 +3,14 @@
 }
 
 .tile {
-  background-image: url(tile.png);
   height: 60px;
+  background-image: url(tile.png);
   border: 1px solid $off-white;
   border-radius: 4px;
+  img {
+    object-fit: contain;
+    width: 100%;
+  }
 }
 
 .selected {
