--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -1,9 +1,16 @@
+<%= render "gardens/weather" %>
+
 <div data-controller="tile-container">
   <div class="garden" style="grid-template-columns: repeat(<%= (@garden.width * 2).to_i %>, 60px)">
     <% @tiles.each do |tile| %>
-      <div class="tile" id="<%= tile.id %>" data-tile-container-target="tile" data-action='click->tile-container#changeClass'></div>
+      <div class="tile" id="<%= tile.id %>" data-tile-container-target="tile" data-action='click->tile-container#changeClass'>
+        <% if tile.plot_id.present? %>
+          <%= image_tag tile.plot.crop.image_url %>
+        <% end %>
+      </div>
     <% end %>
   </div>
+
   <div class="btn btn-primary" data-tile-container-target="link" data-action='click->tile-container#displayForm'>Add my vegetables</div>
   <div class="d-none" data-tile-container-target="form">
     <%= simple_form_for [@garden, @plot] do |f| %>
