--- a/app/views/crops/_crop.html.erb
+++ b/app/views/crops/_crop.html.erb
@@ -1,12 +1,12 @@
-<div data-filter-cropes-target="crop">
+<div data-select-cropes-target="crop">
   <div class="crops">
     <% @crops.each do |crop| %>
-      <div data-filter-cropes-target="card">
+      <div data-select-cropes-target="card">
         <div class="crop-card">
           <div class="card-body">
             <div class="card-text">
               <h2><%= link_to crop.name, crop_path(crop) %></h2>
-              <div data-action="click->filter-cropes#select">
+              <div data-action="click->select-cropes#select">
                 <%= link_to toggle_favorite_crop_path(crop), method: "POST" do %>
                   <i class="fas fa-shopping-basket"></i>
                 <% end %>
