--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,9 +12,11 @@ $light-gray: #F4F4F4;
 // Custom colors:
 $moss: #365622;
 $asparagus: #86AD77;
+$laurel: #C0D4B9;
 $mint: #BDDBD0;
 $eggshell: #E5F1EC;
 $off-white: #FAFAFA;
 $tangerine: #EF907B;
 $burgundy: #AE133B;
 $blue-black: #080E21;
+$weak-yolk: #ECEED1
