Add container partial, and logo.

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "banner";
 @import "button";
 @import "crop_card";
+@import "container";
 @import "form";
 @import "garden";
 @import "garden_card";
