--- a/app/views/crops/_crop.html.erb
+++ b/app/views/crops/_crop.html.erb
@@ -3,13 +3,11 @@
     <div data-select-cropes-target="crop">
       <div class="crop-card">
         <div class="card-body">
+          <%= link_to toggle_favorite_crop_path(crop), method: "POST" do %>
+            <i class="fas fa-shopping-basket fa-5x"></i>
+          <% end %>
           <div class="card-text">
             <h2><%= link_to crop.name, crop_path(crop) %></h2>
-            <div data-action="click->select-cropes#select">
-              <%= link_to toggle_favorite_crop_path(crop), method: "POST" do %>
-                <i class="fas fa-shopping-basket"></i>
-              <% end %>
-            </div>
             <p><%= crop.plant_family %></p>
             <%= link_to crop_path(crop) do %>
             </div>
