Made changes to cards layput

--- a/app/assets/stylesheets/components/_crop_card.scss
+++ b/app/assets/stylesheets/components/_crop_card.scss
@@ -8,6 +8,9 @@
   border-radius: 16px;
   padding: 8px 16px;
   margin: 8px;
+  small {
+    display: none;
+  }
 }
 
 .card-body {
@@ -93,6 +96,15 @@
   }
 }
 
-.active {
-  background-color: $asparagus;
+.favorited {
+  opacity: 0.5;
+  position: relative;
+  img {
+    width: 120px;
+    object-fit: contain;
+  }
+  background-color: $mint;
+  border-radius: 16px;
+  padding: 8px 16px;
+  margin: 8px;
 }
