--- a/app/views/crops/_favorited_crop.html.erb
+++ b/app/views/crops/_favorited_crop.html.erb
@@ -1,4 +1,4 @@
-<div class="crop-card">
+<div clas="crop-card">
   <div class="card-body">
     <%= link_to toggle_favorite_crop_path(crop), method: "POST" do %>
       <i class="fas fa-undo fa-lg"></i>
