Add more crops. Update styling.

--- a/app/assets/stylesheets/components/_crop_card.scss
+++ b/app/assets/stylesheets/components/_crop_card.scss
@@ -1,16 +1,23 @@
-.crop-card {
+// For the crop#index cards
+
+.crop-index-card {
   position: relative;
+  background-color: $mint;
+  border-radius: 16px;
+  margin: 8px 0;
+}
+
+.crop-index-card-body {
+  display: flex;
+  justify-content: space-around;
   img {
     width: 120px;
     object-fit: contain;
   }
-  background-color: $mint;
-  border-radius: 16px;
 }
 
-.card-body {
-  display: flex;
-  justify-content: space-around;
+.crop-index-card-text {
+
 }
 
 // For the crop#show cards
