--- a/app/views/gardens/new.html.erb
+++ b/app/views/gardens/new.html.erb
@@ -1,12 +1,9 @@
 <div class="container">
   <h1>Let's build your garden.</h1>
   <div>
-  <h2>image</h2>
-  <h2>image</h2>
-  <h2>image</h2>
-  <h2>image</h2>
+  <%= image_tag "measure.png", style: "width: 100%;"%>
   </div>
-  <small>NOTE: Currently, only square or rectangular garden beds are supported by this app.</small>
+  <small>NOTE: Currently, only square or rectangular gardens are supported by this app.</small>
   <%= simple_form_for @garden do |f| %>
     <%= f.input :location, label: "Where is your garden?" %>
     <%= f.input :height, collection: 1..10, label: "Measure the length of your garden bed the closest 0.5 meters:" %>
