--- a/app/views/crops/index.html.erb
+++ b/app/views/crops/index.html.erb
@@ -1,16 +1,18 @@
-<div data-controller="filter-crops">
-  <%= form_with url: crops_path, method: :get, html: { class: 'mb-4 input-group', data: { filter_cropes_target: 'form', action: "submit->filter-cropes#update" } } do |f| %>
-    <%= f.text_field :query,
-                      class: "form-control",
-                      placeholder: 'city',
-                      value: params[:query],
-                      data: {
-                        filter_cropes_target: "searchInput"
-                      }
-                      %>
-    <%= button_tag(class: "btn btn-primary") do %>
-      <i class="fas fa-search"></i>
+<div class="container">
+  <div data-controller="filter-crops">
+    <%= form_with url: crops_path, method: :get, html: { class: 'mb-4 input-group', data: { filter_cropes_target: 'form', action: "submit->filter-crops#update" } } do |f| %>
+      <%= f.text_field :query,
+                        class: "form-control",
+                        placeholder: 'city',
+                        value: params[:query],
+                        data: {
+                          filter_cropes_target: "searchInput"
+                        }
+                        %>
+      <%= button_tag(class: "btn btn-primary") do %>
+        <i class="fas fa-search"></i>
+      <% end %>
     <% end %>
-  <% end %>
-  <%= render 'crop', crops: @crops %>
+    <%= render 'crop', crops: @crops %>
+  </div>
 </div>
