--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,11 +2,11 @@
 @import "alert";
 @import "avatar";
 @import "banner";
+@import "button";
 @import "crop_card";
 @import "container";
 @import "form";
 @import "garden";
 @import "garden_card";
-@import "general";
 @import "navbar";
 @import "weather_widget";
