added style to favorites

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "banner";
 @import "button";
 @import "crop_card";
+@import "crop_favorite";
 @import "container";
 @import "form";
 @import "garden";
