--- a/app/views/crops/_favorited_crop.html.erb
+++ b/app/views/crops/_favorited_crop.html.erb
@@ -1,6 +1,6 @@
-<div class="crop-card">
-  <div class="card-body">
-    <div class="card-text">
+<div class="crop-favorite-card">
+  <div class="crop-favorite-card-body">
+    <div class="crop-favorite-card-text">
       <h2><%= crop.name %></h2>
       <%= link_to toggle_favorite_crop_path(crop), method: "POST" do %>
         <i class="fas fa-undo"></i>
