Add horizontal scroll to garden div. Update navbar options.

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,12 @@
-.navbar-lewagon {
+.navbar-nouyuu {
   justify-content: space-between;
   background: $light-gray;
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-nouyuu .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
+.navbar-nouyuu .navbar-brand img {
   width: 150px;
 }
