--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-nouyuu">
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
   <% end %>
@@ -8,9 +8,6 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Selected Crops:  #{current_user.favorited_by_type('Crop').count}", favorite_crops_path, class: "nav-link" %>
-        </li>
         <li class="nav-item">
           <%= link_to "Create a Garden", new_garden_path, class: "nav-link" %>
         </li>
@@ -18,7 +15,10 @@
           <%= link_to "My Gardens", current_user.gardens.any? ? gardens_path : new_garden_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "List of Crops", crops_path, class: "nav-link" %>
+          <%= link_to "All Crops", crops_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to "Favorited Crops:  #{current_user.favorited_by_type('Crop').count}", favorite_crops_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
